--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "material-ui": "^0.20.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-tap-event-plugin": "^3.0.3",
+    "reactstrap": "^8.0.1",
+    "recharts": "^1.6.2",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
