--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-tap-event-plugin": "^3.0.3",
     "reactstrap": "^8.0.1",
     "recharts": "^1.6.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
